--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,6 @@ requests-oauthlib==1.3.0
 s3transfer==0.4.2
 six==1.16.0
 sqlparse==0.4.1
+stripe==2.57.0
 typing-extensions==3.7.4.3
 urllib3==1.26.4
